<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text= "@string/add_task_title"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

    <EditText
        android:id="@+id/editTextTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description" />

    <EditText
        android:id="@+id/editTextFinishBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_finishby" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorLight" />

</LinearLayout>